--- a/src/pages/questions.html
+++ b/src/pages/questions.html
@@ -7,7 +7,7 @@
 <ion-content>
   <ion-card *ngFor="let item of items" (click)="showAnswer(item)" icon-start>
     <ion-card-header>
-      {{item.type}}
+      {{item.questionNumber}}. {{item.type}}
     </ion-card-header>
 
     <ion-card-content text-wrap ion-item >
