--- a/src/pages/contests/contests.html
+++ b/src/pages/contests/contests.html
@@ -5,12 +5,13 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="openContestPage(item)" icon-start>
+  <ion-item-group *ngFor="let item of items">
+    <ion-item-divider color="light">{{item.group}}</ion-item-divider>
+    <ion-item *ngFor="let round of item.rounds" (click)="openContestPage(round)">
       <ion-icon [name]="'md-' + item.icon" [ngStyle]="{'color': item.color}" item-start></ion-icon>
-      {{ item.title }}
-    </button>
-  </ion-list>
+      {{round.label}}
+    </ion-item>
+  </ion-item-group>
 </ion-content>
 
 
