--- a/src/pages/questions.html
+++ b/src/pages/questions.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Questions</ion-title>
+    <ion-title>{{pageLabel}}</ion-title>
   </ion-navbar>
 </ion-header>
 
