--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Contests" tabIcon="apps"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Topics" tabIcon="basket"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="About" tabIcon="basketball"></ion-tab>
+  <!--<ion-tab [root]="tab3Root" tabTitle="About" tabIcon="basketball"></ion-tab>-->
 </ion-tabs>
