--- a/src/pages/topics/topics.html
+++ b/src/pages/topics/topics.html
@@ -1,17 +1,17 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Contact
-    </ion-title>
+    <ion-title>Questions By Topic</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
+  <ion-item-group *ngFor="let item of items">
+    <ion-item-divider color="light">{{item.group}}</ion-item-divider>
+    <ion-item *ngFor="let round of item.rounds" (click)="openContestPage(round)">
+      <ion-icon [name]="'md-' + item.icon" [ngStyle]="{'color': item.color}" item-start></ion-icon>
+      {{round.label}} ({{round.count}})
     </ion-item>
-  </ion-list>
+  </ion-item-group>
 </ion-content>
+
+
